--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,7 +9,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_riverpod: ^2.4.3
   go_router: ^11.1.2
+  google_fonts: ^6.1.0
+  random_name_generator: ^1.2.0
 
 dev_dependencies:
   flutter_test:
